target/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Body'", "'Break'", "'Continue'", 
                     "'Do'", "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", 
                     "'EndFor'", "'EndWhile'", "'For'", "'Function'", "'If'", 
                     "'Parameter'", "'Return'", "'Then'", "'Var'", "'While'", 
                     "'True'", "'False'", "'EndDo'", "<INVALID>", "'+'", 
                     "'+.'", "'-'", "'-.'", "'*'", "'*.'", "'\\'", "'\\.'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'>.'", "'<.'", "'>=.'", "'<=.'", 
                     "'='", "'=\\='", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "';'", "':'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "ID", "BODY", "BREAK", "CONTINUE", "DO", 
                      "ELSE", "ELSE_IF", "END_BODY", "END_IF", "END_FOR", 
                      "END_WHILE", "FOR", "FUNCTION", "IF", "PARAMETER", 
                      "RETURN", "THEN", "VAR", "WHILE", "TRUE", "FALSE", 
                      "END_DO", "COMMENT", "ADD_INT", "ADD_FLOAT", "SUB_INT", 
                      "SUB_FLOAT", "MUL_INT", "MUL_FLOAT", "DIV_INT", "DIV_FLOAT", 
                      "MODULO", "NOT", "AND", "OR", "EQUAL_INT", "UNEQUAL", 
                      "LARGE_INT", "SMALL_INT", "LARGE_EQUAL_INT", "SMALL_EQUAL_INT", 
                      "LARGE_FLOAT", "SMALL_FLOAT", "LARGE_EQUAL_FLOAT", 
                      "SMALL_EQUAL_FLOAT", "ASSIGN", "EQUAL_FLOAT", "LP", 
                      "RP", "LQ", "RQ", "LB", "RB", "SEMI", "COLON", "COMMA", 
                      "DOT", "MULTI_ARRAYLIT", "ARRAYLIT", "INTLIT", "FLOATLIT", 
                      "BOOLEANLIT", "STRINGLIT", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_var_declaration_stmt = 1
    RULE_var_list = 2
    RULE_func_declaration = 3
    RULE_para_list = 4
    RULE_para = 5
    RULE_index_expression = 6
    RULE_func_body = 7
    RULE_stmt_list = 8
    RULE_assign_stmt = 9
    RULE_if_stmt = 10
    RULE_for_stmt = 11
    RULE_while_stmt = 12
    RULE_do_while_stmt = 13
    RULE_break_stmt = 14
    RULE_continue_stmt = 15
    RULE_call_stmt = 16
    RULE_para_func_list = 17
    RULE_return_stmt = 18
    RULE_expression = 19
    RULE_relational_exp = 20
    RULE_relational_ope = 21
    RULE_non_relational_exp = 22
    RULE_exp1 = 23
    RULE_exp2 = 24
    RULE_exp3 = 25
    RULE_exp4 = 26
    RULE_exp5 = 27
    RULE_exp6 = 28
    RULE_argument_list = 29
    RULE_exp7 = 30
    RULE_variable = 31
    RULE_literal = 32

    ruleNames =  [ "program", "var_declaration_stmt", "var_list", "func_declaration", 
                   "para_list", "para", "index_expression", "func_body", 
                   "stmt_list", "assign_stmt", "if_stmt", "for_stmt", "while_stmt", 
                   "do_while_stmt", "break_stmt", "continue_stmt", "call_stmt", 
                   "para_func_list", "return_stmt", "expression", "relational_exp", 
                   "relational_ope", "non_relational_exp", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "exp6", "argument_list", "exp7", 
                   "variable", "literal" ]

    EOF = Token.EOF
    ID=1
    BODY=2
    BREAK=3
    CONTINUE=4
    DO=5
    ELSE=6
    ELSE_IF=7
    END_BODY=8
    END_IF=9
    END_FOR=10
    END_WHILE=11
    FOR=12
    FUNCTION=13
    IF=14
    PARAMETER=15
    RETURN=16
    THEN=17
    VAR=18
    WHILE=19
    TRUE=20
    FALSE=21
    END_DO=22
    COMMENT=23
    ADD_INT=24
    ADD_FLOAT=25
    SUB_INT=26
    SUB_FLOAT=27
    MUL_INT=28
    MUL_FLOAT=29
    DIV_INT=30
    DIV_FLOAT=31
    MODULO=32
    NOT=33
    AND=34
    OR=35
    EQUAL_INT=36
    UNEQUAL=37
    LARGE_INT=38
    SMALL_INT=39
    LARGE_EQUAL_INT=40
    SMALL_EQUAL_INT=41
    LARGE_FLOAT=42
    SMALL_FLOAT=43
    LARGE_EQUAL_FLOAT=44
    SMALL_EQUAL_FLOAT=45
    ASSIGN=46
    EQUAL_FLOAT=47
    LP=48
    RP=49
    LQ=50
    RQ=51
    LB=52
    RB=53
    SEMI=54
    COLON=55
    COMMA=56
    DOT=57
    MULTI_ARRAYLIT=58
    ARRAYLIT=59
    INTLIT=60
    FLOATLIT=61
    BOOLEANLIT=62
    STRINGLIT=63
    WS=64
    ERROR_CHAR=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67
    UNTERMINATED_COMMENT=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def var_declaration_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declaration_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declaration_stmtContext,i)


        def func_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declarationContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 66
                self.var_declaration_stmt()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 72
                self.func_declaration()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declaration_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var_list(self):
            return self.getTypedRuleContext(BKITParser.Var_listContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_declaration_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declaration_stmt" ):
                return visitor.visitVar_declaration_stmt(self)
            else:
                return visitor.visitChildren(self)




    def var_declaration_stmt(self):

        localctx = BKITParser.Var_declaration_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_declaration_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(BKITParser.VAR)
            self.state = 81
            self.match(BKITParser.COLON)
            self.state = 82
            self.var_list()
            self.state = 83
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VariableContext)
            else:
                return self.getTypedRuleContext(BKITParser.VariableContext,i)


        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ASSIGN)
            else:
                return self.getToken(BKITParser.ASSIGN, i)

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.LiteralContext)
            else:
                return self.getTypedRuleContext(BKITParser.LiteralContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_list" ):
                return visitor.visitVar_list(self)
            else:
                return visitor.visitChildren(self)




    def var_list(self):

        localctx = BKITParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.variable()
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 86
                self.match(BKITParser.ASSIGN)
                self.state = 87
                self.literal()


            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 90
                self.match(BKITParser.COMMA)
                self.state = 91
                self.variable()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKITParser.ASSIGN:
                    self.state = 92
                    self.match(BKITParser.ASSIGN)
                    self.state = 93
                    self.literal()


                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def func_body(self):
            return self.getTypedRuleContext(BKITParser.Func_bodyContext,0)


        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def para_list(self):
            return self.getTypedRuleContext(BKITParser.Para_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_declaration" ):
                return visitor.visitFunc_declaration(self)
            else:
                return visitor.visitChildren(self)




    def func_declaration(self):

        localctx = BKITParser.Func_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(BKITParser.FUNCTION)
            self.state = 102
            self.match(BKITParser.COLON)
            self.state = 103
            self.match(BKITParser.ID)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 104
                self.match(BKITParser.PARAMETER)
                self.state = 105
                self.match(BKITParser.COLON)
                self.state = 106
                self.para_list()


            self.state = 109
            self.func_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ParaContext)
            else:
                return self.getTypedRuleContext(BKITParser.ParaContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_para_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara_list" ):
                return visitor.visitPara_list(self)
            else:
                return visitor.visitChildren(self)




    def para_list(self):

        localctx = BKITParser.Para_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_para_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.para()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 112
                self.match(BKITParser.COMMA)
                self.state = 113
                self.para()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def index_expression(self):
            return self.getTypedRuleContext(BKITParser.Index_expressionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_para

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara" ):
                return visitor.visitPara(self)
            else:
                return visitor.visitChildren(self)




    def para(self):

        localctx = BKITParser.ParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_para)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.index_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Index_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LQ(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LQ)
            else:
                return self.getToken(BKITParser.LQ, i)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INTLIT)
            else:
                return self.getToken(BKITParser.INTLIT, i)

        def RQ(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RQ)
            else:
                return self.getToken(BKITParser.RQ, i)

        def getRuleIndex(self):
            return BKITParser.RULE_index_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndex_expression" ):
                return visitor.visitIndex_expression(self)
            else:
                return visitor.visitChildren(self)




    def index_expression(self):

        localctx = BKITParser.Index_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_index_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(BKITParser.ID)
            self.state = 127 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 124
                self.match(BKITParser.LQ)
                self.state = 125
                self.match(BKITParser.INTLIT)
                self.state = 126
                self.match(BKITParser.RQ)
                self.state = 129 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.LQ):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def stmt_list(self):
            return self.getTypedRuleContext(BKITParser.Stmt_listContext,0)


        def END_BODY(self):
            return self.getToken(BKITParser.END_BODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def var_declaration_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declaration_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declaration_stmtContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_func_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_body" ):
                return visitor.visitFunc_body(self)
            else:
                return visitor.visitChildren(self)




    def func_body(self):

        localctx = BKITParser.Func_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(BKITParser.BODY)
            self.state = 132
            self.match(BKITParser.COLON)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 133
                self.var_declaration_stmt()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self.stmt_list()
            self.state = 140
            self.match(BKITParser.END_BODY)
            self.state = 141
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Assign_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.Assign_stmtContext,i)


        def if_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.If_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.If_stmtContext,i)


        def for_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.For_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.For_stmtContext,i)


        def while_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.While_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.While_stmtContext,i)


        def do_while_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Do_while_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.Do_while_stmtContext,i)


        def break_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Break_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.Break_stmtContext,i)


        def continue_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Continue_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.Continue_stmtContext,i)


        def call_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Call_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.Call_stmtContext,i)


        def return_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Return_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.Return_stmtContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_stmt_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_list" ):
                return visitor.visitStmt_list(self)
            else:
                return visitor.visitChildren(self)




    def stmt_list(self):

        localctx = BKITParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_stmt_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 152
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        self.state = 143
                        self.assign_stmt()
                        pass

                    elif la_ == 2:
                        self.state = 144
                        self.if_stmt()
                        pass

                    elif la_ == 3:
                        self.state = 145
                        self.for_stmt()
                        pass

                    elif la_ == 4:
                        self.state = 146
                        self.while_stmt()
                        pass

                    elif la_ == 5:
                        self.state = 147
                        self.do_while_stmt()
                        pass

                    elif la_ == 6:
                        self.state = 148
                        self.break_stmt()
                        pass

                    elif la_ == 7:
                        self.state = 149
                        self.continue_stmt()
                        pass

                    elif la_ == 8:
                        self.state = 150
                        self.call_stmt()
                        pass

                    elif la_ == 9:
                        self.state = 151
                        self.return_stmt()
                        pass

             
                self.state = 156
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(BKITParser.VariableContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(BKITParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_assign_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stmt" ):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = BKITParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.variable()
            self.state = 158
            self.match(BKITParser.ASSIGN)
            self.state = 159
            self.expression()
            self.state = 160
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(BKITParser.IF, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BKITParser.ExpressionContext,i)


        def THEN(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.THEN)
            else:
                return self.getToken(BKITParser.THEN, i)

        def stmt_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Stmt_listContext)
            else:
                return self.getTypedRuleContext(BKITParser.Stmt_listContext,i)


        def END_IF(self):
            return self.getToken(BKITParser.END_IF, 0)
